upd(styles) - Update font icon names

--- a/src/styles/_accordion.scss
+++ b/src/styles/_accordion.scss
@@ -33,7 +33,7 @@
     }
 
     &:after {
-      content: "\E643";
+      content: "\e8bb";
       position: absolute;
       left: 0;
       font-size: 24px;
