--- a/src/styles/_chatCreateNew.scss
+++ b/src/styles/_chatCreateNew.scss
@@ -121,7 +121,7 @@
     font-size: 24px;
     margin: 0 4px 0 0;
     width: 1.1em;
-    content: "\E603";
+    content: "\e87f";
   }
 
   &.visible {
