--- a/src/styles/_searchChat.scss
+++ b/src/styles/_searchChat.scss
@@ -92,7 +92,7 @@
       font-size: 24px;
       margin: 0 4px 0 0;
       width: 1.1em;
-      content: "\E604";
+      content: "\e880";
     }
   }
 
