--- a/src/styles/_stream.scss
+++ b/src/styles/_stream.scss
@@ -928,7 +928,7 @@
       transform: translate(5px, -50px);
 
       &:after {
-        content: "\E616";
+        content: "\e891";
         font-size: 30px;
         color: #fff;
       }
