--- a/src/styles/components/_headerMediasAdd.scss
+++ b/src/styles/components/_headerMediasAdd.scss
@@ -132,14 +132,14 @@
         }
 
         &:after {
-          content: "\E621";
+          content: "\e89a";
         }
       }
 
       &_story {
 
         &:after {
-          content: "\E620";
+          content: "\e8c1";
         }
       }
     }
