--- a/src/styles/components/_user.scss
+++ b/src/styles/components/_user.scss
@@ -11,7 +11,7 @@
     color: $secondary-color;
   }
   &:after {
-    content: "\E61E";
+    content: "\e898";
   }
 }
 .name {
@@ -426,7 +426,7 @@
   line-height: 36px;
 
   &:after {
-    content: "\E601";
+    content: "\e87d";
     margin: auto;
   }
 }
