--- a/src/styles/components/settings/_profile.scss
+++ b/src/styles/components/settings/_profile.scss
@@ -263,7 +263,7 @@
     z-index: 0;
 
     &:after {
-      content: "\E608";
+      content: "\e884";
       position: absolute;
       top: 0;
       right: 0;
