--- a/src/styles/_addPost.scss
+++ b/src/styles/_addPost.scss
@@ -625,7 +625,7 @@
 
         &:after {
           color: $secondary-color;
-          content: "\E60F";
+          content: "\e88a";
           opacity: 1;
         }
 
@@ -661,7 +661,7 @@
 
       .b-check-state_watermark &,
       .b-check-state_post & {
-        content: "\E610";
+        content: "\e88b";
       }
 
       .b-check-state_live & {
@@ -1172,7 +1172,7 @@
         box-sizing: content-box;
 
         &:after {
-          content: "\E605";
+          content: "\e881";
           @include icon-font;
           font-size: 24px;
           transition: font-size .3s;
@@ -1234,7 +1234,7 @@
       font-size: 22px;
 
       &:after {
-        content: "\E609";
+        content: "\e885";
         @include icon-font;
       }
 
