--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -287,7 +287,7 @@
     padding-right: 32px;
 
     &:after {
-      content: "\E608";
+      content: "\e884";
       position: absolute;
       right: 6px;
       top: 50%;
@@ -402,7 +402,7 @@
     }
 
     &:after {
-      content: "\E600";
+      content: "\e87b";
     }
 
     @include media-breakpoint-up($desktop-breakpoint) {
@@ -813,7 +813,7 @@ button {
 .likes {
 
   &:after {
-    content: "\E616";
+    content: "\e891";
   }
 
   &__counter {
@@ -824,14 +824,14 @@ button {
 .comments {
 
   &:after {
-    content: "\E617";
+    content: "\e892";
   }
 }
 
 .looking {
 
   &:after {
-    content: "\E633";
+    content: "\e8a5";
   }
 }
 
@@ -888,7 +888,7 @@ button {
   }
 
   &:after {
-    content: "\E62D";
+    content: "\e8ab";
   }
 
   .chatForm & {
@@ -914,7 +914,7 @@ button {
       top: 0;
 
       &:after {
-        content: "\E644";
+        content: "\e8bc";
       }
     }
 
@@ -922,7 +922,7 @@ button {
       left: 0;
 
       &:after {
-        content: "\E645";
+        content: "\e8bd";
       }
     }
   }
@@ -933,7 +933,7 @@ button {
       bottom: 0;
 
       &:after {
-        content: "\E646";
+        content: "\e8be";
       }
     }
 
@@ -941,7 +941,7 @@ button {
       right: 0;
 
       &:after {
-        content: "\E643";
+        content: "\e8bb";
       }
     }
   }
@@ -1209,7 +1209,7 @@ button {
   }
 
   &:after {
-    content: "\E605";
+    content: "\e881";
     position: absolute;
     left: 50%;
     top: 50%;
