--- a/src/styles/components/_general.scss
+++ b/src/styles/components/_general.scss
@@ -296,7 +296,7 @@ video {
   }
 
   &:after {
-    content: "\E61B";
+    content: "\e895";
     font-size: 42px;
     opacity: 0.7;
     color: #fff;
@@ -637,7 +637,7 @@ video {
 
     &:after {
       display: block;
-      content: "\E60C";
+      content: "\e8b6";
       font-size: 18px;
       line-height: 24px;
 
