--- a/src/styles/team.scss
+++ b/src/styles/team.scss
@@ -2,12 +2,12 @@
 
 @font-face {
   font-family: 'team';
-  src: url('#{$assetPath}/fonts/team/team.eot?30693766');
-  src: url('#{$assetPath}/fonts/team/team.eot?30693766#iefix') format('embedded-opentype'),
-       url('#{$assetPath}/fonts/team/team.woff2?30693766') format('woff2'),
-       url('#{$assetPath}/fonts/team/team.woff?30693766') format('woff'),
-       url('#{$assetPath}/fonts/team/team.ttf?30693766') format('truetype'),
-       url('#{$assetPath}/fonts/team/team.svg?30693766#team') format('svg');
+  src: url('#{$assetPath}/fonts/team/team.eot?30693767');
+  src: url('#{$assetPath}/fonts/team/team.eot?30693767#iefix') format('embedded-opentype'),
+       url('#{$assetPath}/fonts/team/team.woff2?30693767') format('woff2'),
+       url('#{$assetPath}/fonts/team/team.woff?30693767') format('woff'),
+       url('#{$assetPath}/fonts/team/team.ttf?30693767') format('truetype'),
+       url('#{$assetPath}/fonts/team/team.svg?30693767#team') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -55,96 +55,131 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
 
-.icon-i001:before { content: '\e600'; } /* '' */
-.icon-i002:before { content: '\e601'; } /* '' */
-.icon-i003:before { content: '\e602'; } /* '' */
-.icon-i004:before { content: '\e603'; } /* '' */
-.icon-i005:before { content: '\e604'; } /* '' */
-.icon-i006:before { content: '\e605'; } /* '' */
-.icon-i007:before { content: '\e606'; } /* '' */
-.icon-i008:before { content: '\e607'; } /* '' */
-.icon-i009:before { content: '\e608'; } /* '' */
-.icon-i010:before { content: '\e609'; } /* '' */
-.icon-i011:before { content: '\e60a'; } /* '' */
-.icon-i012:before { content: '\e60b'; } /* '' */
-.icon-i013:before { content: '\e60c'; } /* '' */
-.icon-i014:before { content: '\e60d'; } /* '' */
-.icon-i015:before { content: '\e60e'; } /* '' */
-.icon-i016:before { content: '\e60f'; } /* '' */
-.icon-i017:before { content: '\e610'; } /* '' */
-.icon-i018:before { content: '\e611'; } /* '' */
-.icon-i019:before { content: '\e612'; } /* '' */
-.icon-i020:before { content: '\e613'; } /* '' */
-.icon-i021:before { content: '\e614'; } /* '' */
-.icon-i022:before { content: '\e615'; } /* '' */
-.icon-i023:before { content: '\e616'; } /* '' */
-.icon-i024:before { content: '\e617'; } /* '' */
-.icon-i025:before { content: '\e618'; } /* '' */
-.icon-i026:before { content: '\e619'; } /* '' */
-.icon-i027:before { content: '\e61a'; } /* '' */
-.icon-i028:before { content: '\e61b'; } /* '' */
-.icon-i029:before { content: '\e61c'; } /* '' */
-.icon-i030:before { content: '\e61d'; } /* '' */
-.icon-i031:before { content: '\e61e'; } /* '' */
-.icon-twitter:before { content: '\e61f'; } /* '' */
-.icon-i033:before { content: '\e620'; } /* '' */
-.icon-i034:before { content: '\e621'; } /* '' */
-.icon-i035:before { content: '\e622'; } /* '' */
-.icon-i036:before { content: '\e623'; } /* '' */
-.icon-i037:before { content: '\e624'; } /* '' */
-.icon-i038:before { content: '\e625'; } /* '' */
-.icon-i039:before { content: '\e626'; } /* '' */
-.icon-i040:before { content: '\e627'; } /* '' */
-.icon-i041:before { content: '\e628'; } /* '' */
-.icon-i042:before { content: '\e629'; } /* '' */
-.icon-i043:before { content: '\e62a'; } /* '' */
-.icon-i044:before { content: '\e62b'; } /* '' */
-.icon-i045:before { content: '\e62c'; } /* '' */
-.icon-i046:before { content: '\e62d'; } /* '' */
-.icon-i047:before { content: '\e62e'; } /* '' */
-.icon-i048:before { content: '\e62f'; } /* '' */
-.icon-i049:before { content: '\e630'; } /* '' */
-.icon-i050:before { content: '\e631'; } /* '' */
-.icon-i051:before { content: '\e632'; } /* '' */
-.icon-i052:before { content: '\e633'; } /* '' */
-.icon-i053:before { content: '\e634'; } /* '' */
-.icon-i054:before { content: '\e635'; } /* '' */
-.icon-i055:before { content: '\e636'; } /* '' */
-.icon-i056:before { content: '\e637'; } /* '' */
-.icon-i057:before { content: '\e638'; } /* '' */
-.icon-i058:before { content: '\e639'; } /* '' */
-.icon-i059:before { content: '\e63a'; } /* '' */
-.icon-i060:before { content: '\e63b'; } /* '' */
-.icon-i061:before { content: '\e63c'; } /* '' */
-.icon-i062:before { content: '\e63d'; } /* '' */
-.icon-i063:before { content: '\e63e'; } /* '' */
-.icon-i064:before { content: '\e63f'; } /* '' */
-.icon-i065:before { content: '\e640'; } /* '' */
-.icon-i066:before { content: '\e641'; } /* '' */
-.icon-i067:before { content: '\e642'; } /* '' */
-.icon-i068:before { content: '\e643'; } /* '' */
-.icon-i069:before { content: '\e644'; } /* '' */
-.icon-i070:before { content: '\e645'; } /* '' */
-.icon-i071:before { content: '\e646'; } /* '' */
-.icon-i072:before { content: '\e647'; } /* '' */
-.icon-i073:before { content: '\e648'; } /* '' */
-.icon-i074:before { content: '\e649'; } /* '' */
-.icon-i075:before { content: '\e64a'; } /* '' */
-.icon-i076:before { content: '\e64b'; } /* '' */
-.icon-i077:before { content: '\e64c'; } /* '' */
-.icon-i078:before { content: '\e64d'; } /* '' */
-.icon-i079:before { content: '\e64e'; } /* '' */
-.icon-i080:before { content: '\e64f'; } /* '' */
-.icon-i01:before { content: '\e650'; } /* '' */
-.icon-i17:before { content: '\e551'; } /* '' */
-.icon-i44:before { content: '\e652'; } /* '' */
-.icon-i62:before { content: '\e653'; } /* '' */
-.icon-i63:before { content: '\e654'; } /* '' */
-.icon-i72:before { content: '\e655'; } /* '' */
-.icon-i76:before { content: '\e656'; } /* '' */
+.icon-i001:before { content: '\e87b'; } /* '' */
+.icon-i002:before { content: '\e87d'; } /* '' */
+.icon-i003:before { content: '\e87e'; } /* '' */
+.icon-i004:before { content: '\e87f'; } /* '' */
+.icon-i005:before { content: '\e880'; } /* '' */
+.icon-i006:before { content: '\e881'; } /* '' */
+.icon-i007:before { content: '\e882'; } /* '' */
+.icon-i008:before { content: '\e883'; } /* '' */
+.icon-i009:before { content: '\e884'; } /* '' */
+.icon-i010:before { content: '\e885'; } /* '' */
+.icon-i011:before { content: '\e886'; } /* '' */
+.icon-i012:before { content: '\e887'; } /* '' */
+.icon-i013:before { content: '\e8b6'; } /* '' */
+.icon-i014:before { content: '\e888'; } /* '' */
+.icon-i015:before { content: '\e889'; } /* '' */
+.icon-i016:before { content: '\e88a'; } /* '' */
+.icon-i017:before { content: '\e88b'; } /* '' */
+.icon-i018:before { content: '\e88c'; } /* '' */
+.icon-i019:before { content: '\e88d'; } /* '' */
+.icon-i020:before { content: '\e88e'; } /* '' */
+.icon-i021:before { content: '\e88f'; } /* '' */
+.icon-i022:before { content: '\e890'; } /* '' */
+.icon-i023:before { content: '\e891'; } /* '' */
+.icon-i024:before { content: '\e892'; } /* '' */
+.icon-i025:before { content: '\e893'; } /* '' */
+.icon-i026:before { content: '\e894'; } /* '' */
+.icon-i027:before { content: '\e8b5'; } /* '' */
+.icon-i028:before { content: '\e895'; } /* '' */
+.icon-i029:before { content: '\e896'; } /* '' */
+.icon-i030:before { content: '\e897'; } /* '' */
+.icon-i031:before { content: '\e898'; } /* '' */
+.icon-i032:before { content: '\e899'; } /* '' */
+.icon-i033:before { content: '\e8c1'; } /* '' */
+.icon-i034:before { content: '\e89a'; } /* '' */
+.icon-i035:before { content: '\e89b'; } /* '' */
+.icon-i036:before { content: '\e8c0'; } /* '' */
+.icon-i037:before { content: '\e8b7'; } /* '' */
+.icon-i038:before { content: '\e89c'; } /* '' */
+.icon-i039:before { content: '\e8b9'; } /* '' */
+.icon-i040:before { content: '\e89d'; } /* '' */
+.icon-i041:before { content: '\e8b0'; } /* '' */
+.icon-i042:before { content: '\e8af'; } /* '' */
+.icon-i043:before { content: '\e8ae'; } /* '' */
+.icon-i044:before { content: '\e8ad'; } /* '' */
+.icon-i045:before { content: '\e8ac'; } /* '' */
+.icon-i046:before { content: '\e8ab'; } /* '' */
+.icon-i047:before { content: '\e8aa'; } /* '' */
+.icon-i048:before { content: '\e8a9'; } /* '' */
+.icon-i049:before { content: '\e8a8'; } /* '' */
+.icon-i050:before { content: '\e8a7'; } /* '' */
+.icon-i051:before { content: '\e8a6'; } /* '' */
+
+
+
+.icon-i052:before { content: '\e8a5'; } /* '' */
+.icon-i053:before { content: '\e8a4'; } /* '' */
+.icon-i054:before { content: '\e8a3'; } /* '' */
+.icon-i055:before { content: '\e8a2'; } /* '' */
+.icon-i056:before { content: '\e8a1'; } /* '' */
+.icon-i057:before { content: '\e8b8'; } /* '' */
+.icon-i058:before { content: '\e8a0'; } /* '' */
+.icon-i059:before { content: '\e89f'; } /* '' */
+.icon-i060:before { content: '\e89e'; } /* '' */
+
+.icon-i061:before { content: '\e8b1'; } /* '' */
+.icon-i062:before { content: '\e8b2'; } /* '' */
+.icon-i063:before { content: '\e8b3'; } /* '' */
+.icon-i064:before { content: '\e8bf'; } /* '' */
+.icon-i065:before { content: '\e8b4'; } /* '' */
+.icon-i066:before { content: '\e87c'; } /* '' */
+.icon-i067:before { content: '\e8ba'; } /* '' */
+.icon-i068:before { content: '\e8bb'; } /* '' */
+.icon-i069:before { content: '\e8bc'; } /* '' */
+.icon-i070:before { content: '\e8bd'; } /* '' */
+.icon-i071:before { content: '\e8be'; } /* '' */
+.icon-i072:before { content: '\e8c2'; } /* '' */
+.icon-i073:before { content: '\e8c3'; } /* '' */
+.icon-i074:before { content: '\e8c4'; } /* '' */
+.icon-i075:before { content: '\e8c5'; } /* '' */
+.icon-i076:before { content: '\e8c6'; } /* '' */
+.icon-i077:before { content: '\e8c7'; } /* '' */
+.icon-i078:before { content: '\e8c8'; } /* '' */
+.icon-i079:before { content: '\e8c9'; } /* '' */
+.icon-i080:before { content: '\e8ca'; } /* '' */
+
+.icon-i01:before { content: '\e8cb'; } /* '' */
+.icon-i17:before { content: '\e8cc'; } /* '' */
+.icon-i44:before { content: '\e8cd'; } /* '' */
+.icon-i62:before { content: '\e8ce'; } /* '' */
+.icon-i63:before { content: '\e8cf'; } /* '' */
+.icon-i72:before { content: '\e8d0'; } /* '' */
+.icon-i76:before { content: '\e8d1'; } /* '' */
+
 .icon-link:before { content: '\e800'; } /* '' */
 .icon-retweet:before { content: '\e801'; } /* '' */
 .icon-gplus:before { content: '\f0d5'; } /* '' */
 .icon-file-pdf:before { content: '\f1c1'; }
-.icon-dollar:before { content: '💵'; } /* '\1f4b5' */
-.icon-pencil:before { content: '\270e'; } /* '✎' */
+.icon-dollar:before { content: '\e805'; } 
+.icon-pencil:before { content: '\e806'; } /* '✎' */
+
+.icon-icon-font-size-inactive:before { content: '\e8e7'; } /* '' */
+.icon-plus:before { content: '\e8e8'; } /* '' */
+.icon-minus:before { content: '\e8e9'; } /* '' */
+.icon-play:before { content: '\e8d6'; } /* '' */
+.icon-full-screen:before { content: '\e8d7'; } /* '' */
+.icon-i081:before { content: '\e8d8'; } /* '' */
+.icon-letters-bg:before { content: '\e8d9'; } /* '' */
+.icon-prize:before { content: '\e8e2'; } /* '' */
+.icon-gay-prize:before { content: '\e8e6'; } /* '' */
+.icon-vote-dislike:before { content: '\e8d2'; } /* '' */
+.icon-vote-like:before { content: '\e8d3'; } /* '' */
+.icon-highlights:before { content: '\e8dc'; } /* '' */
+
+.icon-i-pin:before { content: '\e8dd'; } /* '' */
+.icon-trans:before { content: '\e8de'; } /* '' */
+.icon-gay:before { content: '\e8df'; } /* '' */
+.icon-hetero:before { content: '\e8e0'; } /* '' */
+.icon-infinity-symbol:before { content: '\e8e1'; } /* '' */
+.icon-i082:before { content: '\e8da'; } /* '' */
+.icon-i074-1:before { content: '\e8db'; } /* '' */
+
+.icon-icon-gay:before { content: '\e8e3'; } /* '' */
+.icon-icon-straight:before { content: '\e8e4'; } /* '' */
+.icon-icon-everyone:before { content: '\e8e5'; } /* '' */
+.icon-icon-pin-link:before { content: '\e8ea'; } /* '' */
+.icon-icon-add-new-link:before { content: '\e8eb'; } /* '' */
+.icon-icon-web-url-inactive:before { content: '\e8ec'; } /* '' */
+.icon-icon-snapchat-inactive:before { content: '\e8ed'; } /* '' */
