Add sound notification for new stream visitor

--- a/src/styles/_eventsControlsMedia.scss
+++ b/src/styles/_eventsControlsMedia.scss
@@ -306,6 +306,14 @@
       }
     }
   }
+
+  &.notifications {
+    .root-btn__inside {
+      &:before {
+        content: "\e88f";
+      }
+    }
+  }
 }
 
 .root-btn {
