fix(explore) - Fix spinner position

--- a/src/styles/components/_loader.scss
+++ b/src/styles/components/_loader.scss
@@ -4,6 +4,9 @@
   text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
+  &-relative {
+    position: relative;
+  }
 
   &_collapsed {
     height: 0;
