fix(login) - Show spinner while login/signup progress

--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -439,6 +439,11 @@
     z-index: 11;
   }
 
+  &-disabled {
+    opacity: .5;
+    pointer-events: none;
+  }
+
   &__title {
     text-align: center;
     font-weight: 300;
