styles-fix(profile) - Tip form position on profile page

--- a/src/styles/_profile.scss
+++ b/src/styles/_profile.scss
@@ -741,6 +741,10 @@
     visibility: visible;
     opacity: 1;
   }
+  .tip-form_profile {
+    display: flex;
+    align-items: center;
+  }
 }
 
 .price-amount-field,
