--- a/src/styles/components/_animation.scss
+++ b/src/styles/components/_animation.scss
@@ -89,3 +89,14 @@
   0%   { background-position: 0 0; }
   100% { background-position: -200% 0; }
 }
+
+@keyframes progressBar {
+
+  from {
+    transform: translateX(-100%);
+  }
+  
+  to {
+    transform: translateX(0);
+  }
+}
