--- a/src/styles/components/_icons.scss
+++ b/src/styles/components/_icons.scss
@@ -485,5 +485,18 @@
     }
   }
 
+  &-microphone {
+    &:after {
+      content: "\e8af";
+    }
+  }
+
+  &-stop {
+    color: $primary-color;
+    &:after {
+      content: '\e808';
+    }
+  }
+
 
 }
