--- a/src/styles/_awards.scss
+++ b/src/styles/_awards.scss
@@ -2,6 +2,11 @@
   justify-content: space-between;
   margin-bottom: 10px;
 
+  .closedAwardsTitle {
+    margin-top: 20px;
+    text-align: center;
+  }
+
   &-header {
     background-color: #000;
     padding: 30px 20px;
